--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
                 <li class="header__li-item"><a class="header__anchor" href="#about"><span class="header__text">SOBRE</span></a></li>
                 <li class="header__li-item"><a class="header__anchor" href="#formation"><span class="header__text">FORMAÇÃO</span></a></li>
                 <li class="header__li-item"><a class="header__anchor" href="#skills"><span class="header__text">HABILIDADES</span></a></li>
-                <li class="header__li-item"><a class="header__anchor" href="http://goo.gl/forms/nlzkVPuEm1Yk6cEy1" target="_blank"><span class="header__text">CONTATO</span></a></li>
+                <li class="header__li-item"><a href="http://goo.gl/forms/nlzkVPuEm1Yk6cEy1" target="_blank" class="header__anchor"><span class="header__text">CONTATO</span></a></li>
             </ul>
         </nav>
     </header>
     <main>
         <article class="start" id="start">
-            <h1 class="start__title opacity hide">Thiago Alex</h1>
-            <h2 class="start__sub-title opacity hide">Desenvolvedor Front-End</h2>
-            <div class="opacity hide">
+            <h1 class="start__title opacity hide fade-start">Thiago Alex</h1>
+            <h2 class="start__sub-title opacity hide fade-start">Desenvolvedor Front-End</h2>
+            <div class="opacity hide fade-start">
                 <a href="https://www.facebook.com/thiago.alexb" target="_blank">
                     <img src="img/icon/fb.svg" class="start__redes" />
                 </a>
@@ -57,7 +57,7 @@
                 Hey guys! Me chamo Thiago e sou Front-end Developer, sou de Campo Laaargo - PR.<br/><br />
                 Gosto muito de tecnologia  e sempre busco ver o que está em alta. Também gosto muito de jogos, tipo Lolzinho haha,
                 também gosto de outras coisas tipo Indie Rock, series, filmes, duolingo, podcasts e streams.<br /><br />
-                Me formei a pouco tempo mas já estou atuando como Front-end a um ano e meio. Atualmente estou fazendo pós graduação  em Aplicativos Móveis e Computação em Nuvem.<br />
+                Me formei a pouco tempo mas já estou atuando como Front-end a um ano e meio. Atualmente estou fazendo pós graduação  em Aplicativos Móveis e Computação em Nuvem.
                 Tenho um grande interesse em Design Digital e algum dia vou aprender, algum dia...<br /><br />
 
                 Vocês podem saber um pouco mais sobre mim pelo <a class="about__link" href="tel:+554196626982">Whats</a> ou por <a class="about__link" href="skype:thiago.alexb@hotmail.com?call">Skype</a> ou por <a class="about__link" href="mailto:thiago.alexb@hotmail.com">E-mail</a>. Ou também pelas redes sociais ali em cima =D
@@ -79,7 +79,7 @@
                         </div>
                     </div>
                     <div class="formation__divider">
-                        <div>
+                        <div class="formation__fix-align">
                             <img src="img/icon/capelo.svg" class="formation_icon" />
                         </div>
                         <div class="formation__course-description">
