--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="header hide">
+    <header class="header">
         <div class="header__button-action">
             <a class="header__burguer">
                 <ul class="header__ul-burguer">
@@ -32,7 +32,7 @@
             </ul>
         </nav>
     </header>
-    <main class="main hide">
+    <main>
         <article class="start" id="start">
             <h1 class="start__title opacity hide fade-start">Thiago Alex</h1>
             <h2 class="start__sub-title opacity hide fade-start">Desenvolvedor Front-End</h2>
@@ -199,13 +199,10 @@
             </div>
         </article>
     </main>
-    <footer class="footer hide">
+    <footer class="footer">
         Desenvolvido por Thiago Alex :)
         <span></span>
     </footer>
-    <div class="loading hide" style="font-size: 30em;">
-        KKKKKK loading....
-    </div>
     <script type="text/javascript" src="js/jquery-2.2.0.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
 </body>
