--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
+    <link rel="shortcut icon" type="image/x-icon" href="/resume/favicon.ico?">
 </head>
 <body>
     <header class="header">
