--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
                 <div class="formation__first-container">
                     <div class="formation__divider">
                         <div>
-                            <img src="img/icon/ingles.svg" class="formation_icon" />
+                            <img src="img/icon/pos.svg" class="formation_icon" />
                         </div>
                         <div class="formation__course-description">
-                            <div>Inglês,</div>
-                            <div>Intermediario - trancado, Escola Wizzard - 2012.</div>
+                            <div>Pós Gradução em Aplicativos Móveis e Computação em Nuvem,</div>
+                            <div class="formation__desc">Em andamento, Universidade Positivo - 2012.</div>
                         </div>
                     </div>
                     <div class="formation__divider">
@@ -85,18 +85,18 @@
                         </div>
                         <div class="formation__course-description">
                             <div>Análise e Desenvolvimento de Sistemas,</div>
-                            <div>Centro Tecnológico Positivo - 2012.</div>
+                            <div class="formation__desc">Centro Tecnológico Positivo - 2012.</div>
                         </div>
                     </div>
                 </div>
                 <div class="formation__second-container">
                     <div class="formation__center">
                         <div>
-                            <img src="img/icon/pos.svg" class="formation_icon-center" />
+                            <img src="img/icon/ingles.svg" class="formation_icon-center" />
                         </div>
                         <div class="formation__course-description">
-                            <div>Pós Gradução em Aplicativos Móveis e Computação em Nuvem,</div>
-                            <div>Em andamento, Universidade Positivo - 2012.</div>
+                            <div>Inglês,</div>
+                            <div class="formation__desc">Intermediario - trancado, Escola Wizzard - 2012.</div>
                         </div>
                     </div>
                 </div>
@@ -199,6 +199,7 @@
                 </div>
             </div>
         </article>
+
     </main>
     <footer class="footer">
         Desenvolvido por Thiago Alex :)
