Arrumado texto sobre e retirado PS

--- a/index.html
+++ b/index.html
@@ -55,13 +55,15 @@
             <h1 class="about__title">SOBRE</h1>
             <hr class="about__first-hr">
             <p class="about__text">
-                Hey guys! Me chamo Thiago e sou Front-end Developer, sou de Campo Laaargo - PR.<br/><br />
-                Gosto muito de tecnologia  e sempre busco ver o que está em alta. Também gosto muito de jogos, tipo Lolzinho haha,
-                também gosto de outras coisas tipo Indie Rock, series, filmes, duolingo, podcasts e streams.<br /><br />
-                Me formei a pouco tempo mas já estou atuando como Front-end a um ano e meio. Atualmente estou fazendo pós graduação  em Aplicativos Móveis e Computação em Nuvem.
-                Tenho um grande interesse em Design Digital e algum dia vou aprender, algum dia...<br /><br />
+                Hey guys! Me chamo Thiago, sou Front-end Developer e moro em Campo Largo, Paraná.<br /><br />
 
-                Vocês podem saber um pouco mais sobre mim pelo <a class="about__link" href="tel:+554196626982">Whats</a> ou por <a class="about__link" href="skype:thiago.alexb@hotmail.com?call">Skype</a> ou por <a class="about__link" href="mailto:thiago.alexb@hotmail.com">E-mail</a>. Ou também pelas redes sociais ali em cima =D
+                Me formei há pouco tempo mas já estou atuando como Front-end há um ano e meio. Atualmente faço pós graduação em Aplicativos Móveis e Computação em Nuvem.
+                Tenho um grande interesse em Design Digital. Algum dia vou aprender, algum dia...<br /><br />
+
+                Gosto muito de tecnologia e sempre busco ver o que está em alta. Também gosto muito de jogos, Indie Rock, séries, filmes, duolingo, podcasts e streams.<br /><br />
+
+                Vocês podem saber um pouco mais sobre mim pelo <a class="about__link" href="tel:+554196626982">WhatsApp</a>, <a class="about__link" href="skype:thiago.alexb@hotmail.com?call">Skype</a>, <a class="about__link" href="mailto:thiago.alexb@hotmail.com">E-mail</a>, ou também pelas redes sociais ali em cima.
+
             </p>
             <hr class="about__second-hr">
         </article>
@@ -137,10 +139,6 @@
                         <div class="skills__progressbar" data-percent="60"></div><span class="skills__percent">60%</span>
                         <span class="skills__complement">MS SQL Server e Oracle</span>
                     </div>
-                    <div class="skills__container-info">
-                        <h2 class="skills__title-info">Photoshop</h2>
-                        <div class="skills__progressbar" data-percent="20"></div><span class="skills__percent">20%</span>
-                    </div>
                 </div>
                 <div class="skills__container-slider">
                     <div class="gallery items-7">
@@ -182,9 +180,6 @@
                             <h4>MS SQL Server e Oracle</h4>
                         </figure>
 
-                        <figure class="item">
-                            <img src="img/icon/ps.svg" class="skills_icon" />
-                        </figure>
 
                         <div class="controls">
                             <a href="#item-1" class="control-button box"></a>
@@ -193,13 +188,11 @@
                             <a href="#item-4" class="control-button box"></a>
                             <a href="#item-5" class="control-button box"></a>
                             <a href="#item-6" class="control-button box"></a>
-                            <a href="#item-7" class="control-button box"></a>
                         </div>
                     </div>
                 </div>
             </div>
         </article>
-
     </main>
     <footer class="footer">
         Desenvolvido por Thiago Alex :)
